<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/listItemHeight"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="@dimen/weatherIconWidth"
        android:layout_height="@dimen/weatherIconHeight"
        android:src="@drawable/weathericonplaceholder" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/weatherIconHeight"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateTimeTitle" />

            <TextView
                android:id="@+id/dateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weatherDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weatherDescriptionTitle" />

            <TextView
                android:id="@+id/weatherDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperatureTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperatureTitle" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>